# blvm-selective-sync

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  module.toml
.github/workflows/: ci.yml  release.yml
docs/: DESIGN.md
src/: apply_policy.rs  audit.rs  cli.rs  config.rs  db.rs  ibd_filter.rs  lib.rs  module.rs  module_api.rs  ops.rs  policy_store.rs  registry_entry.rs  registry_fetch.rs  withheld.rs
tests/: config_tests.rs
