[package]
name = "blvm-selective-sync"
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Commons Team"]
description = "Selective sync: download policy for flagged transaction content during IBD"
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm"
homepage = "https://btcdecoded.org"
keywords = ["bitcoin", "sync", "policy", "selective"]
categories = ["cryptography::cryptocurrencies"]
rust-version = "1.82"

[lib]
name = "blvm_selective_sync"
path = "src/lib.rs"

[[bin]]
name = "selective-sync"
path = "src/bin/main.rs"

[dev-dependencies]
tempfile = "3.10"

[dependencies]
# production needed when unified with blvm-node's blvm-protocol (avoids "unresolved import rayon")
blvm-protocol = { path = "../blvm-protocol", features = ["production"] }
blvm-sdk-macros = { path = "../blvm-sdk/crates/blvm-sdk-macros" }
anyhow = "=1.0.93"
serde = { version = "1.0", features = ["derive"] }
serde_json = "=1.0.108"
toml = "0.8"
hex = "=0.4"
dirs = "5.0"
# Module binary: connect to node, register CLI, handle invocations
blvm-node = { path = "../blvm-node", default-features = false, features = ["redb", "production", "utxo-commitments"] }
blvm-sdk = { path = "../blvm-sdk", default-features = false, features = ["node"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
