[package]
name = "blvm-selective-sync"
version = "0.1.6"
edition = "2024"
authors = ["Bitcoin Commons Team"]
description = "Selective sync: download policy for flagged transaction content during IBD"
license = "MIT"
repository = "https://github.com/BTCDecoded/blvm-selective-sync"
homepage = "https://btcdecoded.org"
keywords = ["bitcoin", "sync", "policy", "selective"]
categories = ["cryptography::cryptocurrencies"]
rust-version = "1.85"

[lib]
name = "blvm_selective_sync"
path = "src/lib.rs"

[[bin]]
name = "selective-sync"
path = "src/bin/main.rs"

[dev-dependencies]
tempfile = "3.10"

[dependencies]
# production needed when unified with blvm-node's blvm-protocol (avoids "unresolved import rayon")
blvm-protocol = { version = ">=0.1, <1", features = ["production"] }
blvm-sdk-macros = ">=0.1, <1"
anyhow = "=1.0.93"
async-trait = "0.1"
bincode = "=1.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
hex = "=0.4.3"
dirs = "5.0"
# Module binary: connect to node, register CLI, handle invocations
blvm-node = { version = ">=0.1, <1", default-features = false, features = ["redb", "production", "utxo-commitments", "sled"] }
blvm-sdk = { version = ">=0.1, <1", default-features = false, features = ["node"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Local monorepo: sibling paths override the version pins above.
# Strip this section in CI/release (BTCDecoded/rust-ci/strip-patch-crates-io@main).
